--- a/index.html
+++ b/index.html
@@ -572,8 +572,11 @@
               <span class="screen-reader-text">Sök efter:</span>
               <div style="position: relative" style="">
                 <div style="position:absolute;left:0;top:0;">
-                  <img src="https://i.ibb.co/vCxT3cs3/sverige.png" alt="Sverige"
-                    style="border-radius:4px;height:42px;width:20px">
+                  <div
+                    style="background:#0154A0;height: 42px;display: flex;align-items: center;justify-content: center;">
+                    <img src="https://i.ibb.co/vCxT3cs3/sverige.png" alt="Sverige"
+                      style="border-radius:4px;height:30px;width:20px">
+                  </div>
                 </div>
                 <input type="search" class="search-field no-autocomplete" placeholder="SÖK PÅ: Reg.nr eller vallfrit "
                   value="" name="s" style="padding-left: 30px !important;height:42px !important;border-radius: 4px;">
